Add anti flammable suicide griefing